--- a/styles/branding.css
+++ b/styles/branding.css
@@ -3102,7 +3102,7 @@ img {
     padding-left: 16px;
     margin: 0 0 12px;
     list-style: none;
-    padding-top: 0px;
+    padding-top: 10px;
 }
 
 .BrandGuidelinePageHeader-list ul li {
